Fixed wrapping of name on phone

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -144,11 +144,14 @@
 		margin-bottom: 5px;
 		display: flex;
 		justify-content: flex-start;
-		align-items: center;
+		flex-wrap: wrap;
 		.emoji {
 			margin-left: 0.5rem;
 			margin-right: 0.5rem;
 			width: 3rem;
+		}
+		.introduction {
+			flex-wrap: wrap;
 		}
 	}
 	.subheading {
